# gazelle_typescript

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  app.ts  package.json  typescript.go
tools/: BUILD.bazel  bazel_deps.bzl
